@@ -35,6 +35,7 @@ ________________________________________________________________________________
 
 RSS Feed available here: @/<a href=/news/news.xml>news/news.xml</a>
 
+- @/<a href=/news/20210414a>news/20210414a</a> Mailing list announcement
 - @/<a href=/news/20200811a>news/20200811a</a> Changes to repositories using symlinks to /var/db/kiss/repo
 - @/<a href=/news/20200511a>news/20200511a</a> Encryption support moved outside init
 - @/<a href=/news/20200509a>news/20200509a</a> GCC 10.1.0 kernel issue
