@@ -8,6 +8,13 @@
 <ttl>1800</ttl>
 <atom:link href="https://k1sslinux.org/news/news.xml" rel="self" type="application/rss+xml"/>
 <item>
+<title>14/04/2021: </title>
+<description></description>
+<link>https://k1sslinux.org/news/20210414a</link>
+<guid isPermaLink="true">https://k1sslinux.org/news/20210414a/</guid>
+<pubDate>Wed, 14 Apr 2021 00:00:00 +0000</pubDate>
+</item>
+<item>
 <title>11/08/2020: Changes to repositories using symlinks to /var/db/kiss/repo</title>
 <description>In two weeks' time, the assumption that the official repositories live in /var/db/kiss/repo will be removed. This change only affects repositories which contain symlinks to this location.</description>
 <link>https://k1sslinux.org/news/20200811a</link>
